Source/WebKit/Shared/ios/InteractionInformationRequest.cpp
@@ -67,6 +67,17 @@ bool InteractionInformationRequest::isValidForRequest(const InteractionInformati
 
     return true;
 }
+    
+bool InteractionInformationRequest::isApproximatelyValidForRequest(const InteractionInformationRequest& other)
+{
+    if (other.includeSnapshot && !includeSnapshot)
+        return false;
+    
+    if (other.includeLinkIndicator && !includeLinkIndicator)
+        return false;
+    
+    return (other.point - point).diagonalLengthSquared() <= 4;
+}
 
 #endif // PLATFORM(IOS)
 
